--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@upstash/redis": "^1.31.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "next": "15.5.2"
