--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.31.3",
+    "stripe": "^16.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "next": "15.5.2"
